@@ -911,11 +911,21 @@ if(sound_ay)
 
 void usage_help(char *cmd)
 {
+#ifdef SZ81	/* Added by Thunor */
+printf("z81 " Z81_VER
+	" - copyright (C) 1994-2004 Ian Collier and Russell Marks.\n");
+printf("sz81 " VERSION
+	" - copyright (C) 2007-2010 Thunor and Chris Young.\n\n");
+printf("usage: %s [-hilLosSTuVdf] [-a sound_addon_type] [-p printout.pbm]\n"
+       "\t\t[-r refresh_rate] [-x horiz_res] [-y vert_res] [filename.p]\n",
+       cmd);
+#else
 printf("z81 " Z81_VER
 	" - copyright (C) 1994-2004 Ian Collier and Russell Marks.\n\n");
 printf("usage: %s [-hilLosSTuV] [-a sound_addon_type] [-p printout.pbm]\n"
        "\t\t[-r refresh_rate] [filename.p]\n",
        cmd);
+#endif
 puts("\n"
 "	-a	emulate AY-chip-based sound addon chip, with\n"
 "		`sound_addon_type' specifying the addon from the types\n"
@@ -947,6 +957,9 @@ puts("\n"
 "		so it's disabled by default.)\n"
 #ifdef SZ81	/* Added by Thunor */
 "	-d	show input device control IDs on-screen (for configuring).\n"
+"	-f	run the program fullscreen instead of in a window.\n"
+"	-x	set the screen's horizontal resolution.\n"
+"	-y	set the screen's vertical resolution.\n"
 #endif
 "\n"
 "	filename.p\n"
@@ -971,7 +984,7 @@ opterr=0;
 
 do
 #ifdef SZ81	/* Added by Thunor */
-  switch(getopt(argc,argv,"a:hilLop:r:sSTuVd"))
+  switch(getopt(argc,argv,"a:hilLop:r:sSTuVdfx:y:"))
 #else
   switch(getopt(argc,argv,"a:hilLop:r:sSTuV"))
 #endif
@@ -1039,7 +1052,16 @@ do
       break;
 #ifdef SZ81	/* Added by Thunor */
     case 'd':	/* Show input device control IDs on-screen */
-      sdl_cl_show_input_id=1;
+      sdl_com_line.show_input_id=1;
+      break;
+    case 'f':	/* Set video fullscreen */
+      sdl_com_line.fullscreen=1;
+      break;
+    case 'x':	/* Set video xres */
+      sscanf(optarg, "%i", &sdl_com_line.xres);
+      break;
+    case 'y':	/* Set video yres */
+      sscanf(optarg, "%i", &sdl_com_line.yres);
       break;
 #endif
     case '?':
@@ -1058,6 +1080,18 @@ do
           fprintf(stderr,"z81: "
                   "the -r option needs a refresh rate as argument.\n");
           break;
+#ifdef SZ81	/* Added by Thunor */
+        /* I'll add this here but it doesn't really work: passing -x -y will
+         * not catch the errors, but my own sdl_com_line_process does later */
+        case 'x':
+          fprintf(stderr,"sz81: "
+                  "the -x option needs a horizontal resolution as argument.\n");
+          break;
+        case 'y':
+          fprintf(stderr,"sz81: "
+                  "the -y option needs a vertical resolution as argument.\n");
+          break;
+#endif
         default:
           fprintf(stderr,"z81: option `%c' not recognised.\n",optopt);
         }
